[package]
name = "xbox_cd_popup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
log = "0.4.22"
windows = { version = "0.58.0", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "UI_Notifications",
    "UI_Popups",
    "Data_Xml_Dom",
    "Foundation_Collections",

    # K32EnumProcessModules, K32EnumProcesses
    "Win32_System_ProcessStatus","Win32_Foundation",
    "Win32_System_LibraryLoader", # GetModuleFileNameA
] }
windows-core = "0.58.0"


[build-dependencies]
cbindgen = "0.27.0"